--- a/assets/scss/listingsForm.scss
+++ b/assets/scss/listingsForm.scss
@@ -1,64 +1,61 @@
-.listings__form{
-  padding:5%;
+.listings__form {
+  padding: 5%;
   display: grid;
- 
+
   grid-template-columns: auto 100%;
   grid-template-rows: 1fr;
   justify-items: center;
   height: 89%;
-  
-  .listings__form-list{
-    
+
+  .listings__form-list {
+    display: grid;
+    grid-column: 1;
+    margin-right: 1em;
+
+    .list-step {
+      color: grey;
+      display: grid;
+      grid-template-rows: auto 1fr;
+      height: 100%;
+
+      span {
+        position: relative;
+        width: 3em;
+        height: 3em;
+        border-radius: 50%;
+        color: #fff;
+        background-color: grey;
         display: grid;
+        line-height: 1;
+      }
+
+      &:before {
+        content: "";
+        display: block;
+        grid-row: 2;
         grid-column: 1;
-        margin-right: 1em;
-      
-        .list-step{
-        color:grey;
-        display: grid;
-        grid-template-rows: auto 1fr;
-        height: 100%;
-       
-         span{
-          position: relative;
-          width: 3em;
-          height: 3em;
-          border-radius: 50%;
-          color: #FFF;
-          background-color:grey;
-          place-items: center;
-          display: grid;
-          line-height: 1;
-         }
-        
-         &:before,
-         {
-          content: '';
-          display: block;
-          grid-row: 2;
-          grid-column: 1; 
-          width: 2em;
-          width: 0px;
-          margin: 0 auto;
-          border-right:4px solid currentColor;
-          transition: color 0.5s ease;
-         }
-        
-         &:last-child::before,
-         &:last-child::after {
-           display: none; 
-         }
-         
-         &:first-child{  
-            color:hsla(204, 70%, 53%, 0.9);
-            span{
-              background-color: hsla(204, 70%, 53%, 0.9);
-            }
-       }    
+        width: 2em;
+        width: 0px;
+        margin: 0 auto;
+        border-right: 4px solid currentColor;
+        transition: color 0.5s ease;
+      }
+
+      &:last-child::before,
+      &:last-child::after {
+        display: none;
+      }
+
+      &:first-child {
+        color: hsla(204, 70%, 53%, 0.9);
+        span {
+          background-color: hsla(204, 70%, 53%, 0.9);
+        }
+      }
     }
-}
- 
-  .form__section{
+  }
+
+  .form__section {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -66,45 +63,40 @@
     grid-row: 1;
     grid-column: 2;
 
-    opacity:0;
+    opacity: 0;
     transform: translateY(-80em);
-   
-    
-    transition: 
-      opacity 2s linear, 
-      transform 1.5s cubic-bezier(.5, 0, .5, 1),
+
+    transition: opacity 2s linear, transform 1.5s cubic-bezier(0.5, 0, 0.5, 1),
       visibility 0s linear 2s;
     max-width: 30em;
-    
-    .form__section--h1{
-      font-family: 'Droid Serif', Georgia, Times, serif;
+
+    .form__section--h1 {
+      font-family: "Droid Serif", Georgia, Times, serif;
       text-decoration: none;
-      color:hsla(204, 70%, 53%, 1);
+      color: hsla(204, 70%, 53%, 1);
     }
 
-    .form__section--curentQuestion{
+    .form__section--curentQuestion {
       opacity: 0.8;
       font-weight: bold;
       letter-spacing: 1px;
-      color:grey; 
+      color: grey;
     }
 
-    .form__section--p{
+    .form__section--p {
       margin-bottom: 2em;
-      color:hsla(204, 70%, 53%, 0.8);
-
+      color: hsla(204, 70%, 53%, 0.8);
     }
 
-    .form__section--input{
-        appearance: none;
-        border: 1px solid #CCC;
-        border-radius: 2px;
-        padding: 0.5em;
-        transition: border-color .3s ease;
-        
+    .form__section--input {
+      appearance: none;
+      border: 1px solid #ccc;
+      border-radius: 2px;
+      padding: 0.5em;
+      transition: border-color 0.3s ease;
     }
 
-    .form__section--button{
+    .form__section--button {
       padding: 1rem;
       border: none;
       border-radius: 2px;
@@ -113,24 +105,24 @@
       appearance: none;
       display: inline-block;
       width: auto;
-      
-      background: hsla(204, 70%, 53%, 1) ;
+
+      background: hsla(204, 70%, 53%, 1);
       color: white;
 
       text-transform: uppercase;
-      font-size: .75em;
+      font-size: 0.75em;
       letter-spacing: 2px;
-  
+
       transition: all 0.75s;
-      opacity:0.5;
-      &:hover{
-        opacity:1;
-        }
-      }  
-    &:nth-of-type(1){
-        transform: translateY(0);
+      opacity: 0.5;
+      &:hover {
         opacity: 1;
-        visibility: visible;
+      }
     }
+    &:nth-of-type(1) {
+      transform: translateY(0);
+      opacity: 1;
+      visibility: visible;
     }
+  }
 }
