--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -55,50 +55,23 @@
     }
   }
 }
-@mixin hover-effect-photo($fontSizeTitle,$fontSizeContent,$paddingTop){
 
-  .card{
-    &:after{
-      content:'';
-      position: absolute;
-      top:0;
-      left:0;
-      width: 100%;
-      height: 100%;
-      border-top: 1px solid white;
-      border-bottom: 1px solid white;
-      transition: 0.35s;
-      transform: rotate(25deg) scale3d(1,0,1);
-    }
-    }
-    .card:hover:after{
-        transform: rotate(45deg) scale3d(1,1,1);
-    }
+@mixin hover-effect-photo {
+  .card:hover {
+    filter: grayscale(70%);
+    opacity: 0.9;
     
-    .card:hover {
-      filter: grayscale(70%);
-      opacity: 0.9; 
-      .card__title{
-        opacity:1;
-        padding-top:0;
-        font-size:$fontSizeTitle;
-      }
-      .card__content--li{
-        font-weight: bold;
-        color: 	white;
-        opacity: 1;
-        font-size:$fontSizeContent ;
-        &:nth-of-type(1){
-          padding-left: 0;
-          padding-top: $paddingTop ;
-        }
-        &:nth-of-type(2){ 
-            padding-top: $paddingTop ;
-            padding-right: 0;
-            }
-          }
-        }
+    &:after {
+      transform: rotate(45deg) scale3d(1, 1, 1);
+    }
+
+    .card__content {
+      opacity: 1;
+
+    }
+  }
 }
+
 @mixin one-column-grid(){
   display: grid;
   grid-row-gap: 1.2em;
@@ -108,28 +81,29 @@
   .grid__item {
     text-decoration: none;
 
-    &:nth-of-type(1) {
-      @include hover-effect-photo(2.3em,1em,2.7em);
-    }
+    // &:nth-of-type(1) {
+    //   @include hover-effect-photo(2.3em,1em,2.7em);
+    // }
 
-    &:nth-of-type(2) {
-      @include hover-effect-photo(2.3em,1em,2.7em);
-    }
+    // &:nth-of-type(2) {
+    //   @include hover-effect-photo(2.3em,1em,2.7em);
+    // }
 
-    &:nth-of-type(3) {
-      @include hover-effect-photo(2.3em,0.8em,2.7em);
-    }
+    // &:nth-of-type(3) {
+    //   @include hover-effect-photo(2.3em,0.8em,2.7em);
+    // }
 
-    &:nth-of-type(4) {
-      @include hover-effect-photo(2.3em,0.6em,2.7em);
-    }
+    // &:nth-of-type(4) {
+    //   @include hover-effect-photo(2.3em,0.6em,2.7em);
+    // }
 
-    &:nth-of-type(5) {
-      @include hover-effect-photo(2.3em,0.6em,2.7em);
-    }
+    // &:nth-of-type(5) {
+    //   @include hover-effect-photo(2.3em,0.6em,2.7em);
+    // }
   }
 }
-@mixin two-columns-grid(){
+
+@mixin two-columns-grid() {
   display: grid;
   grid-row-gap: 1.2em;
   grid-template-areas: "a a";
@@ -137,31 +111,35 @@
   grid-auto-rows: 60%;
 
   .grid__item{
-    @include hover-effect-photo(2em,1em,0.5em);
+    // @include hover-effect-photo(2em,1em,0.5em);
     text-decoration: none;
   }
 }
-@mixin home-page-grid(){
+
+@mixin home-page-grid() {
   display: grid;
-  grid-row-gap: 1.2em;
   grid-template-columns: repeat(2, 30%) 40%;
   grid-template-rows: 33.33% repeat(2, 16.66%)  33.33%;
 
   .grid__item {
     text-decoration: none;
+
     &:nth-of-type(1) {
       grid-column: 1 / 3;
       grid-row: 1 / 4;
-      @include hover-effect-photo(2.3em,1.2em,3em);
+
+      margin-bottom: 1em;
+      @include hover-effect-photo;
     }
     
     &:nth-of-type(2) {
       margin-left: 1em;
+      margin-bottom: 1em;
 
       grid-column: 3 / 4;
       grid-row: 1 / 3;
 
-      @include hover-effect-photo(2.3em,1em,2.7em);
+      @include hover-effect-photo;
     }
 
     &:nth-of-type(3) {
@@ -169,7 +147,7 @@
 
       grid-column: 3 / 4;
       grid-row: 3 / 5;
-      @include hover-effect-photo(2.3em,0.8em,2.7em);
+      @include hover-effect-photo;
     }
 
     &:nth-of-type(4) {
@@ -177,16 +155,17 @@
 
       grid-column: 2 / 3;
       grid-row: 4 / 5;
-      @include hover-effect-photo(2.3em,0.6em,2.7em);
+      @include hover-effect-photo;
     }
 
     &:nth-of-type(5) {
       grid-column: 1 / 2;
       grid-row: 4 / 5;
-      @include hover-effect-photo(2.3em,0.6em,2.7em);
+      @include hover-effect-photo;
     }
   }
 }
+
 @mixin query-above($value) {
   @media only screen and (min-width:$value) {
     @content;
