--- a/assets/scss/card.scss
+++ b/assets/scss/card.scss
@@ -1,46 +1,57 @@
 .card {
   height: 100%;
-  box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.55);
+  position: relative;
+
   transform: translateZ(0); 
   opacity: 0.9;
   transition: opacity 0.35s, transform 0.5s;
-  z-index:0;
-  .card__content{
-    z-index:1;
-  position: relative;
-  top: 25%;
-  .card__content--info{
-    .card__content--li{
-      opacity:0;
-      font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
-      text-decoration: none;
-      transition-property: all;
-      transition:  0.86s;
-      text-align: center;
-      &:nth-of-type(1){
-        padding-left:10em;
-      }
-      &:nth-of-type(2){ 
-          padding-right: 10em;
-      }
-    }
+
+  &:after {
+    content: "";
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    transition: 0.35s;
+    transform: rotate(25deg) scale3d(1,0,1);
   }
-  .card__title{
-    opacity:0;
-    font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
-    text-align: center;
-    padding-top: 10em;
+
+  .card__image {
+    height: 100%;
+  }
+
+  .card__content {
+    padding: .5em;
+    position: absolute;
+    top: 1em;
+    left: 50%;
+
     text-decoration: none;
-    transition-property: all;
-    transition:  0.86s;
-    font-size: 1.5em;
+    text-align: center;
+    font-family: 'Droid Sans', Helvetica, Arial, sans-serif;
+
     color: white;
-  }
+    background-color: hsla(0, 50%, 0%, 0.5);
+    opacity: 0;
+    transition: all .3s ease-in-out;
+    transform: translateX(-50%);
+
+    .card__title {
+      margin-bottom: 0.5em;
+    }
+
+    .card__content--li:nth-of-type(1) {
+      margin-bottom: .5em;
+    }
   }
 }
 
 .grid__item {
   overflow: hidden;
+  box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.55);
 
   &:hover .card,
   &:focus .card {
@@ -53,43 +64,42 @@
   }
 
   &:nth-of-type(1) {
-    .card {
-     
+    .card__image {
       background: url("../images/carturesti-medium.jpg") rgba(0, 0, 0, 0.075) center no-repeat;
       background-size: cover;
     }
   }
 
   &:nth-of-type(2) {
-    .card {
+    .card__image {
       background: url("../images/bcu-medium.jpg") rgba(0, 0, 0, 0.075) center no-repeat;
       background-size: cover;
     }
   }
 
   &:nth-of-type(3) {
-    .card {
+    .card__image {
       background: url("../images/college-medium.jpg") rgba(0, 0, 0, 0.075) center no-repeat;
       background-size: cover;
     }
   }
 
   &:nth-of-type(4) {
-    .card {
+    .card__image {
       background: url("../images/asachi-medium.jpg") rgba(0, 0, 0, 0.075) center no-repeat;
       background-size: cover;
     }
   }
 
   &:nth-of-type(5) {
-    .card {
+    .card__image {
       background: url("../images/fablab-medium.jpg") rgba(0, 0, 0, 0.075) center no-repeat;
       background-size: cover;
     }
   }
   
   &:nth-of-type(6) {
-    .card {
+    .card__image {
       background: url("../images/fablab-medium.jpg") rgba(0, 0, 0, 0.075) center no-repeat;
       background-size: cover;
     }
