--- a/assets/scss/components/add-listing.scss
+++ b/assets/scss/components/add-listing.scss
@@ -1,135 +1,225 @@
-.listings__form {
-  padding: 5%;
-  display: grid;
-
-  grid-template-columns: auto 100%;
-  grid-template-rows: 1fr;
-  justify-items: center;
+.main-content.main-content--add-listing{
+  padding-left:2em;
+  padding-top:2em;
+  
+  height: 85%;
+  width: 100%;
   overflow: hidden;
-
-  .listings__form-list {
-    display: grid;
-    grid-column: 1;
-    margin-right: 1em;
-
-    .list-step {
-      color: grey;
-      display: grid;
-      grid-template-rows: auto 1fr;
+  
+  .slider{
+    //padding: 2%;
+    height:100%;
+    width: 300%;
+    display:flex;
+    transform: translateX(-33.33%);
+    transition: all 0.5s;
+    
+    &.move-right{
+      transform: translateX(0);
+    }
+    
+    &.move-left{
+      transform: translateX(-66.66%);
+    }
+    
+    .listing-type{
       height: 100%;
+      width: 33.33%;
+      position: relative;
 
-      span {
+      .type-wrapper {
+        display:flex;
+        position: absolute;
+        height:50%;
+        width: 50%;
+        top:50%;
+        left:50%;
+        transform: translate(-50%,-50%);
+
+        .study,
+        .implement{
+          position: relative;
+          width: 100%;
+          border:2px solid black;
+
+          .title {
+            position: absolute;
+            top:50%;
+            left:50%;
+            transform: translate(-50%,-50%);
+              
+          }  
+        }
+
+        .implement{
+          margin-left: 2em;
+        }
+    }
+    }
+    .listing-form {
+      
+      display: grid;
+
+      grid-template-columns: auto 100%;
+      grid-template-rows: 100%;
+      justify-items: center;
+     
+      position: relative;
+      height: 100%;
+      width: 33.33%;
+
+      .listings__form-list {
         display: grid;
-        place-items: center;
-        position: relative;
-        width: 3em;
-        height: 3em;
-        border-radius: 50%;
-        color: #fff;
-        background-color: grey;
-      }
-
-      &:before {
-        content: "";
-        display: block;
-        grid-row: 2;
         grid-column: 1;
+        margin-right: 1em;
+      
+        .list-step {
+          color: grey;
+          display: grid;
+          grid-template-rows: auto 100%;
+          height: 100%;
 
-        position: relative;
-        left: 50%;
-        height: 35px;
-        width: 4px;
-        background-color: currentColor;
-        transition: color 0.5s ease;
-        transform: translateX(-50%);
+          span {
+            display: grid;
+            place-items: center;
+            position: relative;
+            width: 3em;
+            height: 3em;
+            border-radius: 50%;
+            color: #fff;
+            background-color: grey;
+          }
+
+          &:before {
+            content: "";
+            display: block;
+            grid-row: 2;
+            grid-column: 1;
+
+            position: relative;
+            left: 50%;
+            width: 4px;
+            background-color: currentColor;
+            transition: color 0.5s ease;
+            transform: translateX(-50%);
+          }
+
+          &:last-child:before,
+          &:last-child:after {
+            display: none;
+          }
+
+          &:first-child {
+            color: hsla(204, 70%, 53%, 0.9);
+            
+            span {
+              background-color: hsla(204, 70%, 53%, 0.9);
+            }
+          }
+        }
       }
 
-      &:last-child:before,
-      &:last-child:after {
-        display: none;
-      }
+      .form__section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        grid-row: 1;
+        grid-column: 2;
 
-      &:first-child {
-        color: hsla(204, 70%, 53%, 0.9);
+        transition: opacity .4s ease-in-out, transform .7s ease-out .15s;
+        max-width: 30em;
+
+        &.is-visible {
+          transform: translateY(0);
+          opacity: 1;
+        }
+
+        &.hidden {
+          transform: translateY(100%);
+          opacity: 0;
+          pointer-events: none;
+        }
+
+        .form__section--h1 {
+          font-family: "Droid Serif", Georgia, Times, serif;
+          text-decoration: none;
+          color: hsla(204, 70%, 53%, 1);
+        }
+
+        .form__section--curentQuestion {
+          opacity: 0.8;
+          font-weight: bold;
+          letter-spacing: 1px;
+          color: grey;
+        }
+
+        .form__section--p {
+          margin-bottom: 2em;
+          color: hsla(204, 70%, 53%, 0.8);
+        }
+
+        .form__section--input {
+          appearance: none;
+          border:none;
+          width:10em;
+          border-bottom: 1px black dotted;
+          transition: border-color 0.3s ease;
+          &:focus{
+            outline:0;
+          }
+        }
+
+        .form__section--button {
+          padding: 1rem;
+          border: none;
+          border-radius: 2px;
+          margin-top: 1em;
+
+          appearance: none;
+          display: inline-block;
+          width: auto;
+
+          background: hsla(204, 70%, 53%, 1);
+          color: white;
+
+          text-transform: uppercase;
+          font-size: 0.75em;
+          letter-spacing: 2px;
+
+          transition: all 0.75s;
+          opacity: 0.5;
+          
+          &:hover {
+            opacity: 1;
+          }
+        }
+      }
+      .reset{    
+        border: none;
+    
+        position: absolute;
+        bottom:2em;
+        right:2em;
+        appearance: none;
+        display: inline-block;
+  
+        background: hsla(204, 70%, 53%, 1);
+    
+        width:8em;
+        height: 5em;
+        text-transform: uppercase;
+        font-size: 0.75em;
+        letter-spacing: 2px;
+        opacity:0.8;
+
+        transition: all 0.75s;
         
-        span {
-          background-color: hsla(204, 70%, 53%, 0.9);
+        &:hover {
+          background-color: red;
         }
       }
     }
-  }
-
-  .form__section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    grid-row: 1;
-    grid-column: 2;
-
-    transition: opacity .4s ease-in-out, transform .7s ease-out .15s;
-    max-width: 30em;
-
-    &.is-visible {
-      transform: translateY(0);
-      opacity: 1;
-    }
-
-    &.hidden {
-      transform: translateY(100%);
-      opacity: 0;
-      pointer-events: none;
-    }
-
-    .form__section--h1 {
-      font-family: "Droid Serif", Georgia, Times, serif;
-      text-decoration: none;
-      color: hsla(204, 70%, 53%, 1);
-    }
-
-    .form__section--curentQuestion {
-      opacity: 0.8;
-      font-weight: bold;
-      letter-spacing: 1px;
-      color: grey;
-    }
-
-    .form__section--p {
-      margin-bottom: 2em;
-      color: hsla(204, 70%, 53%, 0.8);
-    }
-
-    .form__section--input {
-      appearance: none;
-      border: 1px solid #ccc;
-      border-radius: 2px;
-      padding: 0.5em;
-      transition: border-color 0.3s ease;
-    }
-
-    .form__section--button {
-      padding: 1rem;
-      border: none;
-      border-radius: 2px;
-      margin-top: 1em;
-
-      appearance: none;
-      display: inline-block;
-      width: auto;
-
-      background: hsla(204, 70%, 53%, 1);
-      color: white;
-
-      text-transform: uppercase;
-      font-size: 0.75em;
-      letter-spacing: 2px;
-
-      transition: all 0.75s;
-      opacity: 0.5;
-      
-      &:hover {
-        opacity: 1;
-      }
-    }
+    
   }
 }
