--- a/assets/scss/components/place.scss
+++ b/assets/scss/components/place.scss
@@ -1,62 +1,135 @@
-.main-content-place{
-        height: 88%;
+.main-content-place {
+    height: 88%;
+
     .place-info {
         padding: 2em 7em;
         height: 85%;
-
+    
         .place-grid {
             display: grid;
             grid-template-columns: 30% 70%;
-            grid-template-rows: 70% 30%;
-
+            grid-template-rows: 75% 25%;
+           
             height: calc(100% - 7em);
-            
-            .place-grid__item{
+           
+            .place-grid__item {
                 
-               
-                &:nth-of-type(1){
+                &:nth-of-type(1) {
                     grid-column: 1 / 2;
                     grid-row: 1 / 2;
-
-                    margin-bottom:2em;
-
-                    img{
-                        height:100%;
+                
+                    img {
+                        height: 100%;
                         width: 100%;
                         border-radius: 50%;
-                
                     }
                 }
-
-                &:nth-of-type(2){
+                
+                &:nth-of-type(2) {
                     grid-column: 2 / 3;
                     grid-row: 1 / 3;
+                    
+                    margin-left: 2em;
+                    border: 2px black solid;
+                    
+                    display: flex;
+                    justify-content: center;
+                    flex-direction: column;
+                    
+                    .place-info__title {
+                        padding:0.3em;
 
-                    margin-left:2em;
-                    border:2px black solid;
+                        height: 20%;
+                        font-size: 2.5em;
+                        text-align: center;
+                    }
+                    
+                    .place-info__container {
+                        width: 100%;
+                        height: 100%;
+                    
+                        display: flex;
+                        justify-content: center;
+                    
+                        .place-info__colaborator-container {
+                            width: 70%;
+                            position: relative;
+
+                            border-top: 2px black solid;
+
+                            .place-info__colaborator {
+                                position: absolute;
+                                top:10%;
+                                left:50%;
+                                transform: translate(-50%,-10%);
+                               
+                                font-size: 1.5em;
+                            }
+                    
+                            img {
+                                position: absolute;
+                                top:40%;
+                                left:50%;
+                                transform: translate(-50%,-40%);
+
+                                width: 50%;
+                                height: 50%;
+                            }
+                        }
+                        .place-info__details-container {
+                            width: 30%;
+                            border-left: 2px black solid;
+                            border-top: 2px black solid;
+
+                            position: relative;
+
+                            .place-info__details-title {
+                                position: absolute;
+                                top:10%;
+                                width:100%;
+
+                                font-size: 1.5em;
+                                text-align: center;
+                            }
+
+                            .place-info__details {
+                                padding: 1.5em;
+
+                                position: absolute;
+                                top:40%;
+                                width:100%;
+                                li {
+                                    text-align: center;
+                                }
+                            }
+                         }
+                    }
                 }
-
-                &:nth-of-type(3){
+                &:nth-of-type(3) {
                     grid-column: 1 / 2;
                     grid-row: 2/ 3;
-
+                  
                     position: relative;
-
-                    .place-listings__button{
-                        border:black solid 2px;
-
+                  
+                    .place-listings__button {
+                        border: black solid 2px;
+                  
                         position: absolute;
                         height: 50%;
                         width: 50%;
-                        left:50%;
-                        top:50%;
-                        transform: translate(-50%,-50%);
-
+                        left: 50%;
+                        top: 50%;
+                        transform: translate(-50%, -50%);
+                  
                         text-align: center;
                         line-height: 100%;
-                      
+                  
+                        h2 {
+                            padding-top: 1em;
+                            text-transform: uppercase;
+                            pointer-events: none;
+                        }
                     }
-                    
                 }
             }
         }
